--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon app.js | npx pino-pretty",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
+    "nanoid": "3.3.7",
     "nodemon": "^3.0.3",
-    "pine": "^1.1.1"
+    "pino": "^8.17.2"
+  },
+  "devDependencies": {
+    "pino-pretty": "^10.3.1"
   }
 }
