--- a/package.json
+++ b/package.json
@@ -5,21 +5,27 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js | npx pino-pretty",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "nanoid": "3.3.7",
     "nodemon": "^3.0.3",
     "pino": "^8.17.2"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
     "pino-pretty": "^10.3.1"
   }
 }
