--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon app.js | npx pino-pretty",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint app.js"
+    "lint": "npx eslint app.js",
+    "fix" : "npm run lint -- --fix"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "nanoid": "3.3.7",
